@@ -37,6 +37,7 @@ using System.Xml;
 
 using Prebuild.Core.Attributes;
 using Prebuild.Core.Interfaces;
+using System.IO;
 
 namespace Prebuild.Core.Nodes
 {
@@ -48,6 +49,7 @@ namespace Prebuild.Core.Nodes
 		#region Fields
 
 		private IDataNode parent;
+		string[] m_WebTypes = new string[] { "aspx", "ascx", "master", "ashx" };
 
 		#endregion
 
@@ -68,7 +70,10 @@ namespace Prebuild.Core.Nodes
 				parent = value;
 			}
 		}
-
+		public string[] WebTypes
+		{
+			get { return m_WebTypes; }
+		}
 		/// <summary>
 		/// Parses the specified node.
 		/// </summary>
@@ -76,7 +81,46 @@ namespace Prebuild.Core.Nodes
 		public virtual void Parse(XmlNode node)
 		{
 		}
-
+		public BuildAction GetBuildActionByFileName(string fileName)
+		{
+			string extension = Path.GetExtension(fileName).ToLower();
+			foreach (string type in WebTypes)
+			{
+				if (extension == type)
+					return BuildAction.Content;
+			}
+			return BuildAction.Compile;
+		}
+		/// <summary>
+		/// Parses the file type to figure out what type it is
+		/// </summary>
+		/// <returns></returns>
+		public SubType GetSubTypeByFileName(string fileName)
+		{
+			string extension = System.IO.Path.GetExtension(fileName).ToLower();
+			string designer = String.Format(".designer{0}", extension);
+			string path = fileName.ToLower();
+			if (extension == ".resx")
+			{
+				return SubType.Designer;
+			}
+			else if (path.EndsWith(".settings"))
+			{
+				return SubType.Settings;
+			}
+			else
+			{
+				
+				foreach (string type in WebTypes)
+				{
+					if (path.EndsWith(string.Format("{0}{1}", type, extension)))
+					{
+						return SubType.CodeBehind;
+					}
+				}
+			}
+			return SubType.Code;
+		}
 		#endregion
 	}
 }
